--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -563,4 +563,5 @@
     <string name="messageLinkHandling_dialog_body">Some links may be unsafe or redirect you unexpectedly. Review the link below before proceeding:\n\n%1$s\n\nDo you want to continue?</string>
     <string name="messageLinkHandling_dialog_positive">Yes, open the link</string>
     <string name="messageLinkHandling_dialog_negative">No</string>
+    <string name="show_unknown">All</string>
 </resources>
